# micrograd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-python.yaml
micrograd/: nn.py
tests/: test_value.py
